// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.FloatingBox props bgStyle="filled" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props bgStyle="outline" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-outline"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props bgStyle="transparent" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-transparent"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props bgStyle="underline" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-underline"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props borderRadius="4px" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": "4px",
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props borderRadius="8px" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": "8px",
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props checkGrammar=false 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props checkGrammar=true 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props checkHighlight=false 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props checkHighlight=true 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props checkSpaces=false 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props checkSpaces=true 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props className="my-classname" 1`] = `
<div
  className="uu5-bricks-floating-box my-classname uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.FloatingBox props content=12345 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
  12345
</div>
`;

exports[`UU5.Bricks.FloatingBox props controlled=false 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props controlled=true 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props default props 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props disabled=false 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props disabled=true 1`] = `
<div
  className="uu5-bricks-floating-box uu5-common-disabled uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={null}
    onTouchStart={null}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.FloatingBox props draggable=false 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-not-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.FloatingBox props draggable=true 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props dynamic=false 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props dynamic=true 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props elevation="0" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-0 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props elevation="1" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-1 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props elevation="2" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-2 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props elevation="3" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-3 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props elevation="4" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props elevation="5" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-5 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props elevation=0 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props elevation=1 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-1 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props elevation=2 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-2 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props elevation=3 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-3 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props elevation=4 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props elevation=5 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-5 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props header="floating-box" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
    <span
      className="uu5-bricks-floating-box-header-only-text"
    >
      floating-box
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props header="some-text" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
    <span
      className="uu5-bricks-floating-box-header-only-text"
    >
      some-text
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props hidden=false 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props hidden=true 1`] = `
<div
  className="uu5-bricks-floating-box uu5-common-hidden uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props id="myId" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="myId"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="myId-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props name="myName" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  name="myName"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props noIndex=false 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props noIndex=true 1`] = `
<div
  className="uu5-bricks-floating-box uu5-noindex uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props position="6em 30%" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": "30%",
      "right": undefined,
      "top": "6em",
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props position="10px -50px" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": "50px",
      "top": "10px",
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props selected=false 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props selected=true 1`] = `
<div
  className="uu5-bricks-floating-box uu5-common-selected uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "padding": "8px",
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "borderRadius": 8,
      "bottom": undefined,
      "color": "blue",
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props textCorrector=false 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props textCorrector=true 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 184,
    }
  }
  title="My Tooltip"
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props width="500px" 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": "500px",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.FloatingBox props width=200 1`] = `
<div
  className="uu5-bricks-floating-box uu5-bricks-floating-box uu5-common-elevation-4 uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 8,
      "bottom": undefined,
      "left": undefined,
      "right": undefined,
      "top": undefined,
      "width": 200,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-floating-box-draggable uu5-bricks-floating-box-header"
    id="uuID-draggable"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <Icon
      className="uu5-bricks-floating-box-drag-icon"
      icon="mdi-drag"
    />
  </div>
</div>
`;
